--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
 }
 
-#map,
+#map-id,
 body,
 html {
   height: 100%;
@@ -46,3 +46,9 @@ html {
 h1 {
   text-align: center;
 }
+
+.legend i {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  }
